--- a/views/admin/planeditor.ejs
+++ b/views/admin/planeditor.ejs
@@ -30,8 +30,8 @@
       <div class="nav-wrapper black lighten-1">
         <a href="#!" class="brand-logo">
           <img
-            src="https://arrowproxies.com/Images/2x/Asset%201@2x.png"
-            style="height:50px; width: 50px; margin:10px;"
+            src="logo.png"
+            style="height: 80px; width: 80px; margin: 20px; border-radius: 50%"
           />
         </a>
       </div>
