--- a/public/style.css
+++ b/public/style.css
@@ -1,378 +1,881 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@400;500;600;700&display=swap");
+
 * {
-  margin: 0rem;
-  padding: 0rem;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 body {
-  overflow: hidden;
-  height: 100vh;
-  color: white;
-  background-image: linear-gradient(to bottom, #202020 -10%, #000000);
-  font-family: "Poppins", sans-serif;
-}
-
-nav {
-  height: 100px;
-}
-
-a {
-  text-decoration: none !important;
-}
-
-nav {
-  padding-top: 30px;
-  height: 100px;
-}
-
-nav p {
-  color: white;
-}
-
-.out {
-  font-weight: 800;
-  color: red;
-}
-
-.out:hover {
-  color: red;
-}
-
-.logo {
-  width: 4.2rem;
-}
-
-.arrowtxt {
-  font-size: 20px;
-  font-weight: 700;
-}
-
-nav {
-  width: 100vw;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0rem 2.5rem;
-}
-
-nav a,
-.user {
-  color: white;
-  font-size: 13px;
-}
-
-nav a:hover {
-  color: #2af6b2;
-}
-
-.links {
-  font-weight: bold;
-  justify-content: space-between;
-  display: flex;
-  width: 300px;
-  margin: 0rem 10rem 0rem -9rem;
-}
-
-.brand {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.logo {
-  margin-right: 3.2rem;
-}
-
-.margin {
-  margin-right: 22px;
-}
-
-.pad {
-  padding: 0px 13px;
-}
-
-.productitems {
-  font-size: 14px !important;
-  overflow-y: scroll;
-  height: 175px;
-}
-
-.storage {
-  flex-direction: column;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 13rem;
-  width: 14rem;
-  background-image: url(Images/2x/circle.png);
-  background-position: center;
+  font-family: "Montserrat", sans-serif;
+  background-image: url("./assets/bg.png");
   background-size: cover;
+  background-attachment: fixed;
   background-repeat: no-repeat;
 }
 
+a {
+  text-decoration: none;
+}
+
+.links a {
+  font-family: "Bebas Neue";
+  font-size: 32px;
+  display: block;
+  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  color: #fff;
+}
+
+.links a:not(:first-child) {
+  margin-top: 27px;
+}
+
+.sidebar {
+  padding: 38px 44px;
+  padding-top: 66px;
+  backdrop-filter: blur(10px);
+}
+
+.sidebar .twitter {
+  margin: 1.2rem 0;
+}
+
+.socials svg path {
+  fill: white;
+}
+
+.links {
+  margin-top: 5rem;
+}
+
+.sidebarcontainer {
+  height: 100%;
+  max-height: 100vh;
+  overflow-y: auto;
+  position: sticky;
+  top: 0;
+}
+
+.sidebar .socials img {
+  width: 60px;
+}
+
+.sidebar {
+  position: relative;
+  height: 100%;
+}
+
+.back {
+  position: absolute;
+  bottom: 36px;
+  left: 21px;
+  cursor: pointer;
+}
+
+.socials {
+  position: absolute;
+  bottom: 36px;
+  right: 21px;
+}
+
 .container {
+  display: grid;
+  min-height: 100vh;
+  grid-template-columns: 22vw 1fr;
+}
+
+.header {
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 36px;
+  color: #0e0f0f;
+  font-family: "Inter";
+}
+
+.smtext {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  color: #0e0f0f;
+  font-family: "Inter";
+  margin-top: 8px;
+}
+
+.flex {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 83%;
-  margin: 0 auto;
-}
-
-.small {
-  font-size: 11px;
-  color: rgb(158, 158, 158);
-}
-
-.proxylist {
-  padding: 0rem 1.5rem 0rem 3rem !important;
-  border-radius: 20px;
-  width: 75%;
-  background-color: #242222;
-  height: 15rem;
-  color: rgb(110, 110, 110);
-}
-
-.section1 {
-  padding: 0.4rem 0rem;
-  margin: 0rem 0rem 1rem 0rem;
-  height: 40%;
-  display: flex;
-  justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
+  margin-top: 1rem;
 }
 
-.top {
+.sp-bt {
+  justify-content: space-between;
+}
+
+.userimg {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.user {
   display: flex;
+  align-items: center;
+  margin-top: 1rem;
+}
+
+.user .name {
+  margin-left: 36px;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+  color: #5e5959;
+  margin-right: 1rem;
+}
+
+.logoimg {
+  border-radius: 50px;
+}
+
+.noscroll {
+  max-height: 100vh;
+  overflow: hidden;
+}
+
+.main {
+  padding-left: 80px;
+  padding-right: 50px;
+  background-color: #fff;
+  padding-top: 58px;
+  height: 100%;
+  padding-bottom: 2rem;
+}
+
+.label {
+  font-size: 12px;
+  line-height: 12px;
+  font-family: "Inter";
+  color: #7a7e80;
+}
+
+.input input {
+  border: none;
+  font-size: 16px;
+  margin-top: 4px;
+  font-family: "Inter";
+  font-weight: 500;
+  outline: none;
+}
+
+input::placeholder {
+  font-family: "Inter";
+  font-weight: 500;
+  color: #0e0f0f;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
+}
+
+button:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 25px rgba(17, 194, 41, 0.5);
+  transition: all 0.15s ease-in;
+}
+
+button:disabled {
+  filter: grayscale(1);
+}
+
+.privacy a {
+  color: #27c88a;
+}
+
+button:active {
+  transform: scale(0.9);
+}
+
+button.inactive:hover {
+  transform: none !important;
+  box-shadow: none !important;
+}
+
+.input,
+.select {
+  max-width: 325px;
   width: 100%;
-  justify-content: space-between;
-  height: 60px;
+  padding: 8px 16px;
+  background: #ffffff;
+  border: 1px solid #e3e5e6;
+  border-radius: 8px;
+}
+
+.input {
+  margin: 20px 0;
+}
+
+.al-ce {
   align-items: center;
+}
+
+.smheader {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+}
+
+.smheader img {
+  margin-right: 18px;
+  margin-left: 0.5rem;
 }
 
 button {
-  font-weight: 600;
-  background-color: #2af6b2;
-  border-color: none;
+  max-width: 325px;
+  width: 100%;
+  background-color: #27c88a;
   border: none;
-  padding: 0.5rem 1.5rem;
-  border-radius: 5px;
+  line-height: 100%;
+  padding: 16px 0;
+  font-family: "Inter";
+  font-weight: bold;
+  margin-top: 48px;
   cursor: pointer;
-  margin-right: 10px;
-  color: azure;
+  font-size: 16px;
+  line-height: 16px;
+  text-align: center;
+  color: #ffffff;
+  border-radius: 48px;
 }
 
-.proxy {
-  overflow-y: scroll;
-  background-color: #242222;
-  height: 160px !important  ;
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
-::-webkit-scrollbar {
-  border-radius: 10px;
-  color: #1ec165;
-  width: 5px;
+.topbar {
+  margin-bottom: 40px;
 }
 
-::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background-color: #1ec165;
-  width: 5px;
+.generator .smheader {
+  margin-bottom: 42px;
 }
 
-::-webkit-scrollbar-track {
-  background-color: #1b202c;
+.usage .smheader {
+  margin-top: 4rem;
+  margin-bottom: 9px;
 }
 
-.section2 {
-  padding: 0px 10px;
-  border-radius: 20px;
-  height: 40%;
-  background-color: #242222;
-  width: 100%;
+.greyheader {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+  color: #9e9e9e;
 }
 
-.item1 {
-  margin: 3rem 0rem;
-  color: #cccccc;
-  width: 15rem;
-  background-image: linear-gradient(to right, #232022, #2c2d30);
-  height: 3rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 5px;
+.headers,
+.values {
+  display: grid;
+  grid-template-columns: 120px 120px 120px;
 }
 
-.btn {
-  display: flex;
-  flex-wrap: nowrap;
-}
-
-.downimg {
-  margin-right: 2rem;
-}
-
-.bggreen {
+.headers {
+  font-weight: bold;
   font-size: 13px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 5px;
-  width: 80px;
-  height: 25px;
-  background-color: rgba(0, 128, 0, 0.1);
+  line-height: 16px;
+  color: #9e9e9e;
+  margin-bottom: 8px;
 }
 
-.bgred {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 5px;
-  width: 80px;
-  height: 25px;
-  background-color: rgba(255, 0, 0, 0.1);
+.values {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 22px;
+  color: #000000;
 }
 
-.bgyellow {
-  font-size: 13px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 5px;
-  width: 80px;
-  height: 25px;
-  background-color: rgba(238, 255, 87, 0.1);
+.smallgrid {
+  margin-top: 1.2rem;
+  margin-bottom: 2rem;
 }
 
-.text-danger {
-  font-size: 13px;
-  opacity: 1 !important;
-  color: red;
+.fourgrid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 88px);
+  grid-gap: 16px;
+  margin: 68px 0 56px 0;
 }
 
-.text-success {
-  opacity: 1 !important;
-  color: #2ae9a9;
-}
-
-.text-warning {
-  opacity: 1 !important;
-  color: yellow;
-}
-
-.btn1 {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.flex {
-  align-items: center;
-  justify-content: right;
-  display: flex;
-}
-
-.ad {
-  padding: 30px;
-}
-
-.items {
-  border-radius: 5px;
-  color: #cccccc;
-  padding: 0rem 2rem;
-  height: 3rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.neg {
-  margin-right: 10px;
-  margin-left: -13px;
-}
-
-.itemcontainer {
-  font-weight: 600;
+.fourgrid p {
+  text-align: center;
+  margin-top: 10px;
   font-size: 14px;
-  height: 16rem;
-  padding: 0.8rem;
+  font-weight: 700;
+  font-family: "Inter";
 }
 
-.item {
-  border-radius: 5px;
-  color: #cccccc;
-  margin: 0.5rem 0rem;
-  padding: 0rem 1rem;
-  height: 3rem;
-  display: flex;
-  align-items: center;
-  background-color: #1d1d1d;
-  justify-content: space-between;
+.fourgrid > div img {
+  filter: grayscale(1);
+  height: 88px;
+  width: 88px;
+  border-radius: 16px;
 }
 
-.toptext {
-  font-weight: 600;
-  color: azure;
-}
-
-.proxyitems {
-  font-weight: 600;
-  font-size: 13px;
-  color: rgb(164, 170, 170) !important;
-}
-
-.active1 {
-  color: #1ec165;
-}
-
-@media only screen and (min-width: 1920px) {
-  .section1 {
-    margin: 4rem 0rem;
-  }
-
-  .proxy {
-    height: 215px !important;
-  }
-
-  .proxylist {
-    height: 20rem;
-  }
-
-  .storage {
-    height: 18rem;
-    width: 18rem;
-  }
-
-  .btn {
-    padding: 0.8rem 1.5rem;
-  }
-
-  .itemcontainer {
-    height: 19.5rem;
-  }
-
-  .productitems {
-    height: 232px;
-  }
-
-  .toptext {
-    font-size: 1.4rem;
-  }
-}
-
-.flex {
-  display: flex;
-  align-items: center;
-  height: 80px;
-}
-
-.pricebox {
-  min-width: 300px;
+.booster {
   max-width: 400px;
+  margin-top: 5rem;
 }
 
-.monthly {
+.booster .greyheader {
+  margin-top: 0.5rem;
+}
+
+.store {
+  color: #000;
+  font-family: "Inter";
+  font-weight: 700;
+  text-align: center;
+  width: 100%;
+  display: block;
+  margin: auto;
+}
+
+.generated .smheader svg {
+  margin-left: 21px;
+}
+
+textarea {
+  margin-top: 21px;
+  border: 2px solid #27c88a;
+  border-radius: 12px;
+  width: 100%;
+  max-width: 378px;
+  height: 351px;
+  outline: none;
+  resize: none;
+  padding: 30px;
+  font-weight: bold;
+  font-size: 13px;
+  font-family: inherit;
+  line-height: 16px;
+  color: #9e9e9e;
+}
+
+.plansgrid {
+  display: grid;
+  grid-gap: 4vw;
+  margin-bottom: 3rem;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 400px));
+}
+
+.plansgrid > div {
+  border: 2px solid #27c88a;
+  border-radius: 12px;
+  padding: 40px 27px;
+}
+
+.resi .smheader svg {
+  margin-right: 1rem;
+}
+
+.plansgrid .select {
+  border-color: #27c88a;
+}
+
+.features p {
+  font-family: "Inter";
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  color: #000000;
+}
+
+.features p:not(:last-child) {
+  margin-bottom: 1rem;
+}
+
+.features {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
+
+.plansgrid button {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.inactive {
+  background-color: #bdb6ba;
+}
+
+.note {
+  font-family: "Inter";
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 20px;
+  color: #000000;
+}
+
+/* Login */
+
+.logincontainer {
+  min-height: 100vh;
   display: flex;
+  justify-content: center;
   align-items: center;
+  padding: 1rem;
+}
+
+.loginbox {
+  padding: 5rem 7vw;
+  max-width: 70vw;
+  border-radius: 12px;
+  height: 100%;
+  width: 100%;
+  margin: auto;
+  background-color: #fff;
+}
+
+.text {
+  font-size: 36px;
+  background: linear-gradient(91.29deg, #14baa8 6.5%, #94ef63 95.25%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.discord {
+  font-weight: normal;
+  font-size: 48px;
+  line-height: 59px;
+  color: #5e5959;
+}
+
+.discord:hover {
+  color: #94ef63;
+}
+
+.boldtext {
+  font-family: "Bebas Neue";
+  font-size: 15vw;
+  line-height: 100%;
+  margin-top: 1rem;
+  color: #000000;
+  margin-bottom: 10rem;
+}
+
+.discord img {
+  margin-right: 3rem;
+}
+
+/* Checkout */
+
+.plantype {
+  font-weight: normal;
+  font-size: 48px;
+  line-height: 59px;
+  color: #000000;
+  margin: 1.5rem 0 2rem;
+}
+
+.amt {
+  font-size: 16px;
+  font-family: "Inter";
+  margin-top: 4px;
+  line-height: 16px;
+}
+
+.checkoutcontainer {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+}
+
+.checkout {
+  padding: 1.5rem 90px 90px 90px;
+  max-width: 667px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 12px;
+  background-color: #fff;
+}
+
+.stripecard {
+  height: 53px;
+  background-color: red;
+  max-width: 327px;
+  margin-bottom: 1rem;
+}
+
+.discount {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 16px;
+  font-family: "Inter";
+  margin-top: 1rem;
+}
+
+.backbtn {
+  margin-bottom: 1rem;
+  cursor: pointer;
+}
+
+.loginsocial {
+  position: fixed;
+  right: 1rem;
+  transform: translate(0, -50%);
+  top: 50%;
+}
+
+.loginsocial .twitter {
+  margin-bottom: 1rem;
+}
+
+.loginsocial a {
+  display: block;
+}
+/* ------------------------- */
+/* ///  DECORATION CSS ///  */
+.cont_select_center {
+  position: relative;
+  min-height: 52px;
+}
+
+/* ///  END DECORATION CSS  ///  */
+.icon_select_mate {
+  position: absolute;
+  top: 13px;
+  right: 2%;
+  font-size: 16px;
+  height: 22px;
+  transition: all 275ms;
+}
+
+.cont_select_center .label {
+  position: absolute;
+  left: 1rem;
+  top: 8px;
+}
+
+.select_mate {
+  position: relative;
+  float: left;
+  max-width: 325px;
+  border: 1px solid #e3e5e6;
+  width: 100%;
+  min-height: 52px;
+  font-family: "Inter";
+  color: #777;
+  font-weight: 300;
+  background-color: #fff;
+  border-radius: 8px;
+  transition: all 375ms ease-in-out;
+  /* Oculto el elemento select */
+}
+.select_mate select {
+  position: absolute;
+  overflow: hidden;
+  height: 0px;
+  opacity: 0;
+  z-index: -1;
+}
+
+.cont_list_select_mate {
+  position: relative;
+  float: left;
+  width: 100%;
+}
+
+.cont_select_int {
+  position: absolute;
+  left: 0px;
+  top: 6px;
+  z-index: 999;
+  overflow: hidden;
+  height: 0px;
+  width: 100%;
+  background-color: #fff;
+  padding: 0px;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  border-radius: 0px 0px 3px 3px;
+  transition: all 375ms ease-in-out;
+}
+.cont_select_int li {
+  position: relative;
+  float: left;
+  width: 100%;
+  border-bottom: 1px solid #e0e0e0;
+  background-color: #f5f5f5;
+  list-style-type: none;
+  padding: 10px 2%;
+  margin: 0px;
+  transition: all 275ms ease-in-out;
+  display: block;
+  cursor: pointer;
+}
+.cont_select_int li:last-child {
+  border-radius: 3px;
+  border-bottom: 0px;
+}
+.cont_select_int li:hover {
+  background-color: rgba(39, 200, 138, 0.5);
+}
+.cont_select_int .active {
+  background-color: #27c88a;
+  color: #fff;
+}
+.cont_select_int .active:hover {
+  background-color: #27c88a;
+}
+/* etiqueta <p> con la opcion selecionada  */
+.selecionado_opcion {
+  padding: 18px 16px 8px 16px;
+  width: 96%;
+  display: block;
+  font-family: "Inter";
+  font-weight: 500;
+  margin: 0px;
+  color: #0e0f0f;
+  cursor: pointer;
+  position: relative;
+  transform: translateY(6px);
+}
+
+.scroll {
+  padding: 0 50px 16px 38px;
+  border-radius: 12px;
+  max-height: 70vh;
+  overflow-y: auto;
+  border: 2px solid #27c88a;
+}
+
+.date {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  margin-bottom: 1.2rem;
+  line-height: 29px;
+  margin-top: 38px;
+}
+
+.history p {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 22px;
+  color: #9e9e9e;
+}
+
+.download {
+  margin-left: auto;
+  display: block;
+  margin-top: 2rem;
+}
+
+.service p {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 2rem;
+}
+
+.scrollside {
+  display: none;
+}
+
+.bar {
+  margin-top: 1rem;
+  display: none;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    grid-template-columns: 1fr;
+  }
+
+  .bar {
+    display: block;
+  }
+
+  .main {
+    padding: 0 1.5rem;
+  }
+
+  .sidebarcontainer {
+    display: none;
+  }
+
+  .plantype {
+    font-size: 1.8rem;
+    line-height: 125%;
+    margin: 1rem 0 1.5rem 0;
+  }
+
+  .sidebar {
+    min-height: 100vh;
+  }
+
+  .scrollside {
+    transition: all 0.5s ease;
+    z-index: 1000;
+    position: absolute;
+    display: block;
+    left: 0;
+    top: 0;
+    width: 100%;
+    min-height: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url("./assets/bg.png");
+  }
+
+  .none {
+    transform: translateX(-100%);
+  }
+
+  .checkout {
+    padding: 1.5rem;
+  }
+}
+
+.close {
+  position: absolute;
+  right: 1rem;
+  top: 3rem;
+}
+
+.hamburger {
+  padding: 15px 0;
+  display: inline-block;
+  cursor: pointer;
+  transition-property: opacity, filter;
+  transition-duration: 0.15s;
+  transition-timing-function: linear;
+  font: inherit;
+  color: inherit;
+  text-transform: none;
+  background-color: transparent;
+  border: 0;
+  margin: 0;
+  overflow: visible;
+}
+.hamburger:hover {
+  opacity: 0.7;
+}
+.hamburger.is-active:hover {
+  opacity: 0.7;
+}
+.hamburger.is-active .hamburger-inner,
+.hamburger.is-active .hamburger-inner::before,
+.hamburger.is-active .hamburger-inner::after {
+  background-color: #000;
+}
+
+.hamburger-box {
+  width: 40px;
+  height: 24px;
+  display: inline-block;
+  position: relative;
+}
+
+.hamburger-inner {
+  display: block;
+  top: 50%;
+  margin-top: -2px;
+}
+.hamburger-inner,
+.hamburger-inner::before,
+.hamburger-inner::after {
+  width: 40px;
+  height: 4px;
+  background-color: #000;
+  border-radius: 4px;
+  position: absolute;
+  transition-property: transform;
+  transition-duration: 0.15s;
+  transition-timing-function: ease;
+}
+.hamburger-inner::before,
+.hamburger-inner::after {
+  content: "";
+  display: block;
+}
+.hamburger-inner::before {
+  top: -10px;
+}
+.hamburger-inner::after {
+  bottom: -10px;
+}
+
+@media (max-width: 747px) {
+  .grid {
+    grid-template-columns: 1fr;
+  }
+
+  .loginbox {
+    max-width: 100%;
+    padding: 2rem 1.5rem;
+  }
+
+  .loginsocial {
+    position: static;
+    display: flex;
+    transform: none !important;
+  }
+
+  .loginsocial .twitter {
+    margin-bottom: 0;
+    margin-right: 1rem;
+  }
+
+  .loginsocial a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .text {
+    font-size: 1rem;
+  }
+
+  .discord {
+    font-size: 1.4rem;
+    line-height: 125%;
+  }
+
+  .boldtext {
+    margin: 3rem 0;
+    font-size: 21vw;
+  }
+
+  .discord img {
+    width: 30px;
+  }
+
+  .logincontainer {
+    flex-direction: column;
+  }
+
+  .flex.page {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
+  .values,
+  .headers {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .progress {
+    max-width: 320px;
+  }
 }
