--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,96 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./login/assets/style.css" />
-    <title>Arrow Proxies | Login</title>
-    <style>
-      body{
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-      }
-    </style>
+    <link rel="stylesheet" href="./style.css" />
+    <title>ProxyFarm - Get The Best Sneaker Proxies </title>
+    <meta name="description" content="Proxy Farm your goto proxy provider for sneaker proxies that cop. Select the best ingredients to cook with our premium ISPs, DCs and Resis.">
+    <link rel="icon" href="logo.png" type="image/png" sizes="16x16" />
   </head>
   <body>
-    <canvas id="canvas1"> </canvas>
-    <nav>
-      <ul class="links">
-        <li>
-          <a href="#" class="bold">
-            <img src="./login/assets//Arrow_PNG.png" alt="" class="logo" />
-          </a>
-        </li>
-        <li>
-          <a href="#" > Home </a>
-        </li>
-        <li>
-          <a href="#"> Features </a>
-        </li>
-        <li>
-          <a href="./purchase"> Purchase </a>
-        </li>
-        <li class="login">
-          <a href="./login" class="bold">
-            <span><img src="./login/assets//Discord-Logo-White(3).svg" alt="" /></span>
-            Login
-          </a>
-        </li>
-      </ul>
-    </nav>
-    <div class="wrapper">
-      <div class="loginwrapper">
-        <div class="loginsection">
-          <div class="logintext bold">
-            Log in
-          </div>
-          <div class="smtext">PLEASE LOG IN BELOW.</div>
-  
-          <div class="loginbox">
-            <p class="feature bold">Please Log in.</p>
-  
-            <p class="reg">Don't have an account? <a href="./login" class="green">Register here</a>.</p>
-            <div class="loginbtn" style="cursor: pointer;" onclick="location.href='./login'"><img src="./login/assets//Discord-Logo-White(3).svg" alt="" >Login</div>
-            <p class="text">No personal data but your email and profile image are collected</p>
-            <p class="text">Your arrow purchases will be bound and accessible with your Discord
-              accounts.</p>
-          </div>
-        </div>
-      </div>
+    <div class="logincontainer">
+      <div class="loginbox">
+        <div class="text">Premium Residential and ISP proxies</div>
+        <div class="boldtext">PROXYFARM</div>
+        <a href="/login" class="discord flex al-ce">
+          <img src="./assets/discord.svg" alt="" />
+          <span>Login with discord to continue</span>
+        </a>
     </div>
-    <footer>
-      <div class="footercontainer">
-        <div class="secone">
-          <img src="./login/assets//Arrow_PNG.png" alt="" />
-          <p class="light">ARROW PROXIES</p>
-        </div>
-
-        <div class="sectwo">
-          <a href="#"><div class="footerheader">Menu</div></a>
-          <a href="#"> <div class="footerlinks">Home</div></a>
-          <a href="#"> <div class="footerlinks">Features</div></a>
-          <a href="#"> <div class="footerlinks">Purchase</div></a>
-          <a href="#"> <div class="footerlinks">FAQ</div></a>
-        </div>
-
-        <div class="secthree">
-          <a href="#"> <div class="footerheader">Resources</div></a>
-          <a href="#"> <div class="footerlinks">Terms of Policy</div></a>
-          <a href="#"> <div class="footerlinks">Privacy Policy</div></a>
-        </div>
-
-        <div class="secfour">
-          <a href="#"> <div class="footerheader">Get In Touch</div></a>
-          <a href="#"><div class="footerlinks">arrowproxies@gmail.com</div></a>
-        </div>
-
-        <div class="secfive">
-          <a href="#"> <img src="./login/assets//Footer twitter.svg" alt="" /></a>
-          <a href="#"><img src="./login/assets//Footer instagram.svg" alt="" /></a>
-          <a href="#"> <img src="./login/assets//Footer discord.svg" alt="" /></a>
-        </div>
-    </footer>
-    <script src="./login/assets/js/bg.js"></script>
+    <div class="loginsocial">
+      <a href="#" class="twitter">
+        <svg width="59" height="50" viewBox="0 0 59 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M56.5417 6.24995C54.1876 7.6572 51.5811 8.73351 48.8225 9.43745C47.342 7.99477 45.3743 6.97223 43.1857 6.50813C40.997 6.04404 38.693 6.16078 36.5852 6.84256C34.4773 7.52435 32.6675 8.73829 31.4003 10.3202C30.1331 11.9021 29.4698 13.7757 29.5 15.6875V17.7708C25.1798 17.8657 20.899 17.0537 17.0388 15.4071C13.1785 13.7605 9.85874 11.3304 7.37504 8.33329C7.37504 8.33329 -2.45829 27.0833 19.6667 35.4166C14.6038 38.329 8.57263 39.7894 2.45837 39.5833C24.5834 50 51.625 39.5833 51.625 15.625C51.6228 15.0446 51.5569 14.4658 51.4284 13.8958C53.9374 11.7989 55.7079 9.15144 56.5417 6.24995V6.24995Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+      </a>
+      <a href="#" class="mail">
+        <svg width="60" height="58" viewBox="0 0 60 58" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M10 9.66663H50C52.75 9.66663 55 11.8416 55 14.5V43.5C55 46.1583 52.75 48.3333 50 48.3333H10C7.25 48.3333 5 46.1583 5 43.5V14.5C5 11.8416 7.25 9.66663 10 9.66663Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        <path d="M55 14.5L30 31.4167L5 14.5" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+      </a>
+    </div>
   </body>
 </html>
