--- a/views/purchase.ejs
+++ b/views/purchase.ejs
@@ -2,293 +2,299 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/assets/bootstrap.css">
-    <link rel="stylesheet" href="./assets/style.css" />
-   
-    <title>Buy Arrow Proxies</title>
-    <style>
-      body {
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-      }
-      a:hover {
-        filter: brightness(0.8);
-      }
-    </style>
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>ProxyFarm - Buy Proxies</title>
+    <link rel="icon" href="logo.png" type="image/png" sizes="16x16" />
   </head>
   <body>
-    <canvas id="canvas1"> </canvas>
-    <% if(user) {%>
-      <div class="postloginnav">
-        <div class="navgrid">
-        <div class="userdetails">
-            <div class="username bold"><%= user.discordUsername %></div>
-          <div class="logout" onclick="window.location='/logout'"><img src="/assets/Logout.svg" alt=""></div>
-          
-        </div>
-        <div class="navlinks">
-          <a href="/purchase" class="navactive ">Purchase</a>
-          <a href="https://dash.arrowproxies.com/store" class="">Store</a>
-          <!-- <a href="#" class="bold">Profile</a> -->
-          <a href="/" class="">Dashboard</a>
-        </div>  
-        </div>
-        <div class="userimg">
-          <img src="<%= user.discordImage %>" alt="">
-        </div>
-      </div>
-    <%} else {%>  
-      <nav>
-        <ul class="links">
-          <li>
-            <a href="#" class="bold">
-              <img src="./assets/Arrow_PNG.png" alt="" class="logo" />
-            </a>
-          </li>
-          <li>
-            <a href="https://arrowproxies.com/"> Home </a>
-          </li>
-          <li>
-            <a href="https://arrowproxies.com/"> Features </a>
-          </li>
-          <li>
-            <a href="#" class="bold"> Purchase </a>
-          </li>
-          <li class="login">
-            <a href="https://dash.arrowproxies.com/" class="bold">
-              <span><img src="./assets/Discord-Logo-White(3).svg" alt="" /></span>
-              Login
-            </a>
-          </li>
-        </ul>
-      </nav>
-    <%}%>
-   
-    <div class="wrapper">
-      <div class="loginwrapper">
-        <div class="loginsection">
-          <div class="logintext bold">Purchase</div>
-          <div class="smtext">BUY PROXIES HERE</div>
+    <div class="scrollside none">
+      <div class="sidebar">
+        <img class="logoimg" src="/logo.png" alt="" />
 
-          <div class="flex bold">
-            <div class="daily active">
-              <a href="#" id="daily">Daily</a>
-            </div>
+        <div class="links">
+          <a href="/">ISP</a>
+          <a href="/resi">RESIDENTIAL</a>
 
-            <div class="weekly">
-              <a href="#" id="weekly">Weekly</a>
-            </div>
-
-            <div class="monthly">
-              <a href="#" id="monthly">Monthly</a>
-            </div>
+          <a href="/purchase">PURCHASE</a>
+        </div>
+        <div class="socials">
+          <div class="mail">
+            <img src="./assets/mail.svg" />
           </div>
-          <div class="area" id="area"></div>
+          <div class="twitter">
+            <img src="./assets/twitter.svg" />
+          </div>
+          <div class="tos">
+            <img
+              src="https://img.icons8.com/material-rounded/96/ffffff/terms-and-conditions.png"
+            />
+          </div>
+        </div>
+        <div class="close">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="36"
+            height="36"
+            viewBox="0 0 18 18"
+          >
+            <path
+              fill="#fff"
+              d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"
+            />
+          </svg>
         </div>
       </div>
     </div>
-    <footer>
-      <div class="footercontainer">
-          <div class="secone">
-              <img src="./assets/Arrow_PNG.png" alt="" />
-              <p class="light">ARROW PROXIES</p>
+    <div class="container">
+      <div class="sidebarcontainer">
+        <div class="sidebar">
+          <img class="logoimg" src="/logo.png" alt="" />
+
+          <div class="links">
+            <a href="/">ISP</a>
+            <a href="/resi">RESIDENTIAL</a>
+            <a href="/purchase">PURCHASE</a>
+          </div>
+          <div class="socials">
+            <div class="mail">
+              <img src="./assets/mail.svg" />
+            </div>
+            <div class="twitter">
+              <img src="./assets/twitter.svg" />
+            </div>
+            <div class="tos">
+              <img
+                src="https://img.icons8.com/material-rounded/96/ffffff/terms-and-conditions.png"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="main">
+        <div class="bar">
+          <div class="hamburger">
+            <div class="hamburger-box">
+              <div class="hamburger-inner"></div>
+            </div>
+          </div>
+        </div>
+        <div class="flex sp-bt topbar">
+          <div class="page">
+            <div class="header">Purchase</div>
+            <div class="smtext">Buy Proxy Farm’s Premium Sneaker Proxies</div>
           </div>
 
-          <div class="sectwo">
-              <a href="#">
-                  <div class="footerheader">Menu</div>
-              </a>
-              <a href="#">
-                  <div class="footerlinks">Home</div>
-              </a>
-              <a href="#">
-                  <div class="footerlinks">Features</div>
-              </a>
-              <a href="https://dash.arrowproxies.com/purchase">
-                  <div class="footerlinks">Purchase</div>
-              </a>
-
+          <div class="user">
+            <img src="<%- user.discordImage %>" alt="" class="userimg" />
+            <span class="name"> <%= user.discordUsername %> </span>
+            <a href="/logout" class="logoutbtn"
+              ><img src="/assets/Logout.svg" alt=""
+            /></a>
           </div>
+        </div>
+        <div class="plansgrid">
+          <div class="isp">
+            <div class="smheader flex al-ce">
+              <img src="./assets/grn.svg" alt="" />
+              <span>ISP Proxies</span>
+            </div>
+            <div class="features">
+              <p>No data restrictions</p>
+              <p>
+                Proxies are hosted on trusted IPs from many Internet Service
+                Providers
+              </p>
+              <p>Instant Delivery</p>
+              <p>Private proxies that only you can access</p>
+              <p>Monthly payments to keep your proxies over multiple months</p>
+              <p>Username:password authentication</p>
+            </div>
+            <div class="cont_select_center">
+              <div class="select_mate" data-mate-select="active">
+                <div class="label">Plan</div>
 
-          <div class="secthree">
-              <a href="#">
-                  <div class="footerheader">Resources</div>
-              </a>
-              <a href="https://arrowproxies.gitbook.io/arrow-proxies/terms-and-conditions">
-                  <div class="footerlinks">Terms of Policy</div>
-              </a>
-              <a href="https://arrowproxies.gitbook.io/arrow-proxies/">
-                  <div class="footerlinks">Privacy Policy</div>
-              </a>
+                <select
+                  name=""
+                  onchange="ok(this)"
+                  onclick="return false;"
+                  id="plans"
+                ></select>
+                <p class="selecionado_opcion" onclick="open_select(this)"></p>
+                <span onclick="open_select(this)" class="icon_select_mate"
+                  ><svg
+                    fill="#000000"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    width="24"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z" />
+                    <path d="M0-.75h24v24H0z" fill="none" /></svg
+                ></span>
+                <div class="cont_list_select_mate">
+                  <ul class="cont_select_int"></ul>
+                </div>
+              </div>
+            </div>
+            <button id="buyButton">$50 PURCHASE</button>
           </div>
+          <div class="resi">
+            <div class="smheader al-ce flex">
+              <svg
+                width="52"
+                height="56"
+                viewBox="0 0 52 56"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M6.5 48.7649H45.5"
+                  stroke="black"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <path
+                  d="M8.66675 48.7649V23.2214L14.0834 12.7718L26.0001 6.96643L37.9167 12.7718L43.3334 23.2214V48.7649"
+                  stroke="black"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <path
+                  d="M26.0001 25.5436C28.3933 25.5436 30.3334 23.4642 30.3334 20.8993C30.3334 18.3343 28.3933 16.255 26.0001 16.255C23.6068 16.255 21.6667 18.3343 21.6667 20.8993C21.6667 23.4642 23.6068 25.5436 26.0001 25.5436Z"
+                  stroke="black"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <path
+                  d="M19.5 48.7649V37.1542C19.5 36.5383 19.7283 35.9477 20.1346 35.5122C20.5409 35.0767 21.092 34.832 21.6667 34.832H30.3333C30.908 34.832 31.4591 35.0767 31.8654 35.5122C32.2717 35.9477 32.5 36.5383 32.5 37.1542V48.7649"
+                  stroke="black"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+              <span>Residential</span>
+            </div>
+            <div class="features">
+              <p>No data restrictions</p>
+              <p>
+                Proxies are hosted on trusted IPs from many Internet Service
+                Providers
+              </p>
+              <p>Instant Delivery</p>
+              <p>Private proxies that only you can access</p>
+              <p>Monthly payments to keep your proxies over multiple months</p>
+              <p>Username:password authentication</p>
+            </div>
+            <div class="cont_select_center">
+              <div class="select_mate" data-mate-select="active">
+                <div class="label">Data</div>
 
-          <div class="secfour">
-              <a href="#">
-                  <div class="footerheader">Get In Touch</div>
-              </a>
-              <a href="#">
-                  <div class="footerlinks">arrowproxies@gmail.com</div>
-              </a>
+                <select name="" onchange="" onclick="return false;" id="">
+                  <option value="">Select data pack</option>
+                </select>
+                <p class="selecionado_opcion" onclick="open_select(this)"></p>
+                <span onclick="open_select(this)" class="icon_select_mate"
+                  ><svg
+                    fill="#000000"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    width="24"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z" />
+                    <path d="M0-.75h24v24H0z" fill="none" /></svg
+                ></span>
+                <div class="cont_list_select_mate">
+                  <ul class="cont_select_int"></ul>
+                </div>
+              </div>
+            </div>
+            <button class="inactive">$50 PURCHASE</button>
           </div>
+        </div>
+        <div class="note">
+          Discount count codes can be entered in the next stage of purchase
+          please read our TOS before buying
+        </div>
+      </div>
+    </div>
 
-          <div class="secfive">
-              <a href="https://twitter.com/arrowaio"> <img src="./assets/Footer twitter.svg" alt="" /></a>
-              <a href="https://www.instagram.com/arrowaio/"><img src="./assets/Footer instagram.svg" alt="" /></a>
-              <a href="https://discord.gg/JFT34Hg"> <img src="./assets/Footer discord.svg" alt="" /></a>
-          </div>
-   </footer>
-    <script src="./assets/js/bg.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js"
+      integrity="sha512-90vH1Z83AJY9DmlWa8WkjkV79yfS2n2Oxhsi2dZbIv0nC4E6m5AbH8Nh156kkM7JePmqD6tcZsfad1ueoaovww=="
+      crossorigin="anonymous"
+    ></script>
+
     <script>
-      AOS.init();
-
-      let internalTime = {
-        daily: 1,
-        monthly: 30,
-        weekly: 7
-      };
-      let viewing = 1;
-
-      const aps = _.sortBy(
-        <%- JSON.stringify(publicProds) %>, 
-      ["planDuration"]
-      );
-
-      let planState = {};
-
-      aps.forEach((ap) => {
-        if (!planState[ap.planDuration]) {
-          planState[ap.planDuration] = {};
-        }
-        if (!planState[ap.planDuration][ap.serverType]) {
-          planState[ap.planDuration][ap.serverType] = [];
-        }
-
-        planState[ap.planDuration][ap.serverType].push(ap);
-      });
-
-      function stateChange(e) {
-        let config = e.value.split("-");
-        let planSelected = planState[config[0]][config[1]].find(
-          (k) => k.proxyQuantity == config[2]
-        );
-
-        let element = document.getElementById(`${config[0]}-${config[1]}`);
-        element.querySelector(`.purchaseheader`).innerHTML =
-          planSelected.planName;
-
-        element.querySelector(`.pay`).innerHTML = `${
-          planSelected.stock == 0
-            ? `<button class="purchasebtn bold" disabled>OOS</button>`
-            : `<button class="purchasebtn bold" onclick="window.location='/buy/${planSelected._id}'">$${planSelected.planPrice}</button>`
-        }`;
-      }
-
-      function producePriceBox(severType, planDuration) {
-        let plan = planState[planDuration][severType][0];
-
-        console.log(plan);
-        let plans = planState[planDuration][severType];
-
-        let planSelect = plans
-          .map(
-            (k) =>
-              `<option value="${planDuration}-${severType}-${k.proxyQuantity}"> ${k.proxyQuantity}</option>`
-          )
-          .join("");
-
-        return `<div class="pricebox" id="${planDuration}-${severType}" data-aos="zoom-out">
-      <select name="" id="" class="bold" onchange="stateChange(this)">
-          ${planSelect}
-      </select>
-
-      <div class="purchaseheader bold">
-        ${plan.planName}
-      </div>
-      <div class="purchasefeatures">
-        <ul class="bold">
-          <li>
-            Unlimited Data
-          </li>
-          <li>
-            Instant Delivery
-          </li>
-          <li>
-            Expires in ${planDuration} days
-          </li>
-        </ul>
-      </div>
-      <div class="pay">
-      ${
-        plan.stock == 0
-          ? `<button class="purchasebtn bold" disabled>OOS</button>`
-          : `<button class="purchasebtn bold" onclick="window.location='/buy/${plan._id}'">$${plan.planPrice}</button>`
-      }
-      </div>
-
-      </div>
-      `;
-      }
-
-      function renderPlans(duration) {
-        let servers = Object.keys(planState[duration]);
-        let finalInsert = ``;
-        for (let server of servers) {
-          planState[duration][server] = _.sortBy(planState[duration][server], [
-            "proxyQuantity",
-          ]);
-
-          finalInsert += producePriceBox(server, duration);
-        }
-
-        document.getElementById("area").innerHTML = finalInsert;
-      }
-
-      renderPlans(1);
+       const apsAll = _.sortBy(
+         <%- JSON.stringify(publicProds) %>,
+       ["proxyQuantity"]
+       );
 
 
-      $("#monthly").on("click", (e) => {
-        e.preventDefault();
-        viewing = 30;
-        $(".weekly, .daily").removeClass("active");
-        $(".monthly").addClass("active");
-        renderPlans(viewing);
-      });
+       console.log(apsAll);
 
-      $("#weekly").on("click", (e) => {
-        e.preventDefault();
-        viewing = 7;
-        $(".monthly, .daily").removeClass("active");
-        $(".weekly").addClass("active");
-        renderPlans(viewing);
-      });
-      $("#daily").on("click", (e) => {
-        e.preventDefault();
-        viewing = 1;
-        $(".weekly, .monthly").toggleClass("active");
-        $(".daily").addClass("active");
-        renderPlans(viewing);
-      });
+       const plansSelector = document.getElementById("plans");
+       const buyButton = document.getElementById("buyButton");
+       let selectedPlan = 0;
 
-      // $("#monthly, #daily, #weekly").on("click", (e) => {
-       
-      
-       
-      //   viewing = viewing == 1 ? 30 : 1;
-      //   renderPlans(viewing);
-      // });
+       plansSelector.innerHTML = apsAll.map((k,i) => `<option value="${i}"> ${k.planName} </option>`).join("\n");
 
-      console.log(planState);
+
+
+       function selectPlan(index) {
+         let sPlan = apsAll[index];
+
+         let planId  = apsAll[selectedPlan]._id;
+         if(sPlan.stock > 0) {
+           buyButton.innerHTML = `$${sPlan.planPrice} Purchase`
+         }
+         else {
+           buyButton.innerHTML = `Out of Stock`
+         }
+       }
+
+
+       buyButton.addEventListener('click', () => {
+         if(apsAll[selectedPlan].stock > 0) {
+           let planId  = apsAll[selectedPlan]._id;
+           window.location = `/buy/${planId}`;
+         }
+       });
+
+
+       selectPlan(selectedPlan);
+
+
+
+       let burger = document.querySelector(".bar");
+       let sidebar = document.querySelector(".scrollside");
+       let close = document.querySelector(".close");
+
+
+       function ok(e) {
+         selectPlan(e.value);
+         selectedPlan = e.value;
+
+       }
+
+      burger.addEventListener("click", () => {
+         sidebar.classList.remove("none");
+         document.body.classList.add("noscroll");
+       });
+
+       close.addEventListener("click", () => {
+         sidebar.classList.add("none");
+         document.body.classList.remove("noscroll");
+       });
     </script>
+
+    <script src="./select.js"></script>
   </body>
 </html>
