--- a/views/admin/planeditor.ejs
+++ b/views/admin/planeditor.ejs
@@ -30,7 +30,7 @@
       <div class="nav-wrapper black lighten-1">
         <a href="#!" class="brand-logo">
           <img
-            src="logo.png"
+            src="/logo.png"
             style="height: 80px; width: 80px; margin: 20px; border-radius: 50%"
           />
         </a>
