--- a/views/purchase.ejs
+++ b/views/purchase.ejs
@@ -20,13 +20,19 @@
           <a href="/purchase">PURCHASE</a>
         </div>
         <div class="socials">
-          <div class="mail">
+          <div
+            class="mail"
+            onclick="window.location='mailto:support@proxy-farm.com'"
+          >
             <img src="./assets/mail.svg" />
           </div>
-          <div class="twitter">
+          <div
+            class="twitter"
+            onclick="window.location= 'https://twitter.com/proxyfarm'"
+          >
             <img src="./assets/twitter.svg" />
           </div>
-          <div class="tos">
+          <div class="tos" onclick="window.location= './tos'">
             <img
               src="https://img.icons8.com/material-rounded/96/ffffff/terms-and-conditions.png"
             />
@@ -58,13 +64,19 @@
             <a href="/purchase">PURCHASE</a>
           </div>
           <div class="socials">
-            <div class="mail">
+            <div
+              class="mail"
+              onclick="window.location='mailto:support@proxy-farm.com'"
+            >
               <img src="./assets/mail.svg" />
             </div>
-            <div class="twitter">
+            <div
+              class="twitter"
+              onclick="window.location= 'https://twitter.com/proxyfarm'"
+            >
               <img src="./assets/twitter.svg" />
             </div>
-            <div class="tos">
+            <div class="tos" onclick="window.location= './tos'">
               <img
                 src="https://img.icons8.com/material-rounded/96/ffffff/terms-and-conditions.png"
               />
